tests/fail/TypeErrors.java
package fail;

import java.lang.Integer;
import java.lang.System;

public class TypeErrors {

    public static void main(String[] args) {
        int n = Integer.parseInt(args[0]);
        System.out.println(n == true);
    }

}
